syntax = "proto3";

package funds_service;

option go_package = "github.com/cg-2025-crutch/backend/funds-service/internal/grpc/gen";

service FundsService {
  rpc CreateTransaction(CreateTransactionRequest) returns (CreateTransactionResponse);
  rpc GetTransactionById(GetTransactionByIdRequest) returns (GetTransactionByIdResponse);
  rpc GetUserTransactions(GetUserTransactionsRequest) returns (GetUserTransactionsResponse);
  rpc GetUserTransactionsByPeriod(GetUserTransactionsByPeriodRequest) returns (GetUserTransactionsByPeriodResponse);
  rpc UpdateTransaction(UpdateTransactionRequest) returns (UpdateTransactionResponse);
  rpc DeleteTransaction(DeleteTransactionRequest) returns (DeleteTransactionResponse);

  rpc GetAllCategories(GetAllCategoriesRequest) returns (GetAllCategoriesResponse);
  rpc GetCategoriesByType(GetCategoriesByTypeRequest) returns (GetCategoriesByTypeResponse);
  rpc GetCategoryById(GetCategoryByIdRequest) returns (GetCategoryByIdResponse);

  rpc GetUserBalance(GetUserBalanceRequest) returns (GetUserBalanceResponse);
}

message Category {
  int32 id = 1;
  string name = 2;
  string type = 3;
  string icon = 4;
  int64 created_at = 5;
}

message GetAllCategoriesRequest {}

message GetAllCategoriesResponse {
  repeated Category categories = 1;
}

message GetCategoriesByTypeRequest {
  string type = 1;
}

message GetCategoriesByTypeResponse {
  repeated Category categories = 1;
}

message GetCategoryByIdRequest {
  int32 id = 1;
}

message GetCategoryByIdResponse {
  Category category = 1;
}

message Transaction {
  int64 id = 1;
  string user_uid = 2;
  int32 category_id = 3;
  string type = 4;  // income or expense
  double amount = 5;
  string title = 6;
  string description = 7;
  string transaction_date = 8;  // YYYY-MM-DD format
  int64 created_at = 9;
  int64 updated_at = 10;
  Category category = 11;  // Optional, populated with category details
}

message CreateTransactionRequest {
  string user_uid = 1;
  int32 category_id = 2;
  string type = 3;
  double amount = 4;
  string title = 5;
  string description = 6;
  string transaction_date = 7;  // YYYY-MM-DD format
}

message CreateTransactionResponse {
  Transaction transaction = 1;
}

message GetTransactionByIdRequest {
  int64 id = 1;
}

message GetTransactionByIdResponse {
  Transaction transaction = 1;
}

message GetUserTransactionsRequest {
  string user_uid = 1;
  int32 limit = 2;
  int32 offset = 3;
}

message GetUserTransactionsResponse {
  repeated Transaction transactions = 1;
  int64 total = 2;
}

message GetUserTransactionsByPeriodRequest {
  string user_uid = 1;
  int32 days = 2;  // Number of days from today
  int32 limit = 3;
  int32 offset = 4;
}

message GetUserTransactionsByPeriodResponse {
  repeated Transaction transactions = 1;
  int64 total = 2;
}

message UpdateTransactionRequest {
  int64 id = 1;
  int32 category_id = 2;
  string type = 3;
  double amount = 4;
  string title = 5;
  string description = 6;
  string transaction_date = 7;
  string user_uid = 8;
}

message UpdateTransactionResponse {
  Transaction transaction = 1;
}

message DeleteTransactionRequest {
  int64 id = 1;
  string user_uid = 2;
}

message DeleteTransactionResponse {
  bool success = 1;
}

message UserBalance {
  string user_uid = 1;
  double total_balance = 2;
  double total_income = 3;
  double total_expense = 4;
  int64 last_transaction_at = 5;
  int64 updated_at = 6;
}

message GetUserBalanceRequest {
  string user_uid = 1;
}

message GetUserBalanceResponse {
  UserBalance balance = 1;
}

