syntax = "proto3";

package user_service;

option go_package = "github.com/github.com/cg-2025-crutch/backend/user-service/proto/user";


service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);

  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);

  rpc Login(LoginRequest) returns (LoginResponse);

  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);

  rpc GetUserById(GetUserByIdRequest) returns (GetUserByIdResponse);

  rpc GetUserByUsername(GetUserByUsernameRequest) returns (GetUserByUsernameResponse);
}

message GetUserByUsernameRequest {
  string username = 1;
}

message GetUserByUsernameResponse {
  User user = 1;
}

message GetUserByIdRequest {
  string id = 1;
}

message GetUserByIdResponse {
  User user = 1;
}

message User {
  string id = 1;
  string username = 2;
  string first_name = 3;
  string second_name = 4;
  int32 age = 5;
  double salary = 6;
  int64 work_sphere_id = 7;
}

message CreateUserRequest {
  string username = 1;
  string password = 2;
  string first_name = 3;
  string second_name = 4;
  int32 age = 5;
  double salary = 6;
  int64 work_sphere_id = 7;
}

message CreateUserResponse {
  User user = 1;
}

message UpdateUserRequest {
  string id = 1;  // UUID as string
  string username = 2;
  string first_name = 3;
  string second_name = 4;
  int32 age = 5;
  double salary = 6;
  int64 work_sphere_id = 7;
}

message UpdateUserResponse {
  User user = 1;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string access_token = 1;
  string refresh_token = 2;
  int64 expires_at = 3;
  User user = 4;
}

message ValidateTokenRequest {
  string access_token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  string user_id = 2;  // UUID as string
  string username = 3;
  int64 expires_at = 4;
}
